# tiny_researcher

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCS.md  README.md  docker-compose.yml  docs-README.md  recommendation.md
backend/: .dockerignore  .env.example  CLAUDE.md  DOCKER.md  Dockerfile  LOCAL_DEV.md  Makefile  QUICKSTART.md  README.md  TEST_FROM_SCRATCH.md  pyproject.toml  requirements-dev.txt  requirements.txt  research_cli.py
backend/docker/: Dockerfile  docker-compose.services.yml  docker-compose.yml  docker_setup_complete.md
backend/docs/: agent_guide.md  business_logic.md  checklist.md  dataflow.md  erd.md  phase_1_2_implementation.md  phase_5_api_integration.md  process_track.md  recommendation_change.md  system_design.md
backend/docs/codebase-analysis-docs/: CODEBASE_KNOWLEDGE.md  debate.md
backend/reports/: transformers_20260207_004651.md
backend/scripts/: debug_analyzer.py  seed_db.py  test_api.py  test_arxiv_searcher.py  test_cli.py  test_debate_flow.py  test_e2e_flow.py  test_full_pipeline.py  test_indexing_manual.py  test_ingestion_manual.py  test_mongodb.py  test_multilingual_conversation.py  test_multilingual_standalone.py  test_new_planner.py  test_openalex.py  test_phase_1_2.py  test_phase_3.py  test_phase_4.py  test_plan_executor.py  test_planner_api.py  test_planner_schema.py  test_planner_tools.py  test_request_integration.py  test_research_pipeline.py  test_tool_registry.py
backend/src/adapters/: llm.py
backend/src/api/: dependencies.py  main.py
backend/src/auth/: dependencies.py  email_service.py  oauth.py  schemas.py  service.py
(+196 files in other folders)
